Attempted fix for whitespace on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,11 @@
 body, html {
-	margin:0;
-	padding:0;
 	font-family:Arial, Helvetica, sans-serif;
 	font-size:12px;
-	height: 100%;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 	
 }
 a {color:#db0f00}
